--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "three": "^0.149.0",
     "vite": "^5.4.14",
+    "web-ifc": "^0.0.39",
     "web-ifc-three": "^0.0.126"
   }
 }
